# adsk-fusion-mcp

./: README.md  pyproject.toml  requirements.txt
addin/: FusionMCPAddIn.manifest  FusionMCPAddIn.py
addin/lib/commands/: cylinder.py  extrude_profile.py  sketch.py  sketch_circle.py  sketch_rectangle.py
addin/lib/rpc/: server.py
addin/lib/utils/: uuid.py
mcp_server/: server.py  types.py
