[project]
name = "fusion-mcp"
version = "0.1.0"
description = "Support Free AI Generative Design with MCP"
readme = "README.md"
authors = [
    { name = "tomon9086", email = "tomon9086@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.15.0",
]

[project.scripts]
fusion-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
